# drat2er

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: backward_file_reader.h  clause.h  deletion.h  deletion_eliminator.h  drat_trim_interface.h  file_helper.h  file_reader.h  formula.h  formula_parser.h  forward_file_reader.h  instruction_serialization.h  lrat_parser.h  progress_bar.h  proof_reverser.h  proof_stat_collector.h  proof_step_renamer.h  proof_transformer.h  rat_clause.h  rat_eliminator.h  rup_clause.h  rup_to_resolution_transformer.h  simple_parser.h  unused_clause_eliminator.h  watch.h
src/: backward_file_reader.cc  clause.cc  deletion.cc  deletion_eliminator.cc  drat_trim_interface.cc  file_helper.cc  formula.cc  formula_parser.cc  forward_file_reader.cc  instruction_serialization.cc  lrat_parser.cc  main.cc  progress_bar.cc  proof_reverser.cc  proof_stat_collector.cc  proof_step_renamer.cc  proof_transformer.cc  rat_clause.cc  rat_eliminator.cc  rup_clause.cc  rup_to_resolution_transformer.cc  simple_parser.cc  unused_clause_eliminator.cc  watch.cc
test/: test_clause.cc  test_formula.cc  test_instruction_serialization.cc  test_lrat_parser.cc  test_rat_clause.cc  test_rat_eliminator.cc  test_rup_clause.cc
test/examples/: .gitignore  Urquhart-s5-b1.shuffled.drat  hole20.drat  run_drat2er_on_hard_examples.sh  tph8.drat
